crates/core/tests/snapshots/setting_env_test__setting_parse_env__unnamed_struct__accepts_string.snap
---
source: crates/core/tests/setting_env_test.rs
expression: pretty(container.impl_partial_env_values())
---
fn env_values_with_prefix(
    prefix: Option<&str>,
) -> std::result::Result<Option<Self>, schematic::ConfigError> {
    use schematic::internal::*;
    let mut env = EnvManager::new(prefix, None);
    let mut partial = Self::default();
    partial.0 = env.get_and_parse("KEY", func_ref)?;
    Ok(if env.is_empty() { None } else { Some(partial) })
}
